# meticulous-mcp

./: .gitignore  CONTAINERIZATION.md  DOCKER_GUIDE.md  Dockerfile  FORK_SETUP.md  README.md  docker-compose.yml  pytest.ini  run_all_tests.sh  run_http.py  setup_safe_forks.sh
.github/workflows/: ci.yml
meticulous-mcp/: MCP_CONFIG.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  run_server.py  test_server.py
meticulous-mcp/src/meticulous_mcp/: __init__.py  __main__.py  api_client.py  profile_builder.py  profile_validator.py  server.py  tools.py
meticulous-mcp/src/meticulous_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
meticulous-mcp/tests/: __init__.py  test_api_client.py  test_profile_builder.py  test_profile_validator.py  test_server.py  test_tools.py
pyMeticulous/meticulous/: api.py
python-sdk/: .git-blame-ignore-revs  .gitattribute  .pre-commit-config.yaml  CONTRIBUTING.md  mkdocs.yml  pyproject.toml
python-sdk/.github/workflows/: comment-on-release.yml  main-checks.yml  shared.yml
python-sdk/docs/: index.md
python-sdk/docs/experimental/: index.md  tasks-client.md  tasks-server.md  tasks.md
python-sdk/examples/clients/conformance-auth-client/: README.md  pyproject.toml
python-sdk/examples/clients/conformance-auth-client/mcp_conformance_auth_client/: __init__.py  __main__.py
python-sdk/examples/clients/simple-auth-client/mcp_simple_auth_client/: main.py
python-sdk/examples/clients/simple-task-client/: README.md  pyproject.toml
python-sdk/examples/clients/simple-task-client/mcp_simple_task_client/: __main__.py  main.py
python-sdk/examples/clients/simple-task-interactive-client/: README.md  pyproject.toml
python-sdk/examples/clients/simple-task-interactive-client/mcp_simple_task_interactive_client/: main.py
python-sdk/examples/clients/sse-polling-client/: README.md  pyproject.toml
python-sdk/examples/clients/sse-polling-client/mcp_sse_polling_client/: __init__.py  main.py
python-sdk/examples/servers/everything-server/mcp_everything_server/: server.py
python-sdk/examples/servers/simple-streamablehttp/mcp_simple_streamablehttp/: event_store.py
python-sdk/examples/servers/simple-task/: README.md  pyproject.toml
python-sdk/examples/servers/simple-task-interactive/: README.md  pyproject.toml
python-sdk/examples/servers/simple-task-interactive/mcp_simple_task_interactive/: server.py
python-sdk/examples/servers/simple-task/mcp_simple_task/: server.py
python-sdk/examples/servers/sse-polling-demo/: README.md  pyproject.toml
python-sdk/examples/servers/sse-polling-demo/mcp_sse_polling_demo/: __init__.py  __main__.py  event_store.py  server.py
python-sdk/examples/snippets/: pyproject.toml
python-sdk/examples/snippets/clients/: oauth_client.py  url_elicitation_client.py
python-sdk/examples/snippets/servers/: elicitation.py  oauth_server.py  sampling.py  streamable_config.py  streamable_http_basic_mounting.py  streamable_http_host_mounting.py  streamable_http_multiple_servers.py  streamable_http_path_config.py  streamable_starlette_mount.py
python-sdk/scripts/: test
python-sdk/src/mcp/client/: session.py  session_group.py  sse.py  streamable_http.py
python-sdk/src/mcp/client/auth/: oauth2.py
python-sdk/src/mcp/server/: session.py  streamable_http.py
python-sdk/src/mcp/server/fastmcp/: server.py
python-sdk/src/mcp/shared/: memory.py  session.py
python-sdk/tests/: test_examples.py  test_helpers.py  test_types.py
python-sdk/tests/cli/: test_utils.py
python-sdk/tests/client/: conftest.py  test_auth.py  test_config.py  test_http_unicode.py  test_list_methods_cursor.py  test_logging_callback.py  test_notification_response.py  test_output_schema_validation.py  test_resource_cleanup.py  test_sampling_callback.py  test_scope_bug_1630.py  test_session.py  test_session_group.py  test_stdio.py
python-sdk/tests/client/auth/extensions/: test_client_credentials.py
python-sdk/tests/experimental/tasks/: __init__.py  test_capabilities.py  test_elicitation_scenarios.py  test_message_queue.py  test_request_context.py  test_spec_compliance.py
python-sdk/tests/experimental/tasks/client/: test_capabilities.py  test_handlers.py  test_poll_task.py  test_tasks.py
python-sdk/tests/experimental/tasks/server/: test_context.py  test_integration.py  test_run_task_flow.py  test_server.py  test_server_task_context.py  test_store.py  test_task_result_handler.py
python-sdk/tests/issues/: test_100_tool_listing.py  test_1027_win_unreachable_cleanup.py  test_129_resource_templates.py  test_1338_icons_and_metadata.py  test_1363_race_condition_streamable_http.py  test_141_resource_templates.py  test_152_resource_mime_type.py  test_1754_mime_type_parameters.py  test_355_type_error.py  test_552_windows_hang.py  test_88_random_error.py  test_malformed_input.py
python-sdk/tests/server/: test_cancel_handling.py  test_completion_with_context.py  test_lowlevel_input_validation.py  test_lowlevel_output_validation.py  test_lowlevel_tool_annotations.py  test_read_resource.py  test_session.py  test_session_race_condition.py  test_sse_security.py  test_stateless_mode.py  test_stdio.py  test_streamable_http_manager.py  test_streamable_http_security.py  test_validation.py
python-sdk/tests/server/auth/middleware/: test_auth_context.py  test_bearer_auth.py
python-sdk/tests/server/fastmcp/: test_elicitation.py  test_func_metadata.py  test_integration.py  test_parameter_descriptions.py  test_server.py  test_title.py  test_tool_manager.py  test_url_elicitation.py  test_url_elicitation_error_throw.py
python-sdk/tests/server/fastmcp/auth/: test_auth_integration.py
python-sdk/tests/server/fastmcp/prompts/: test_base.py  test_manager.py
python-sdk/tests/server/fastmcp/resources/: test_file_resources.py  test_function_resources.py  test_resource_manager.py  (+2 more)
python-sdk/tests/server/lowlevel/: test_func_inspection.py
python-sdk/tests/shared/: test_exceptions.py  test_memory.py  test_progress_notifications.py  test_session.py  test_sse.py  test_streamable_http.py  test_tool_name_validation.py  test_ws.py
(+3 files in other folders)
